WIP: switch build to Forge 1.20.1 and apply scripted backport rewrites