@@ -28,7 +28,6 @@ import dev.simulated_team.simulated.service.SimConfigService;
 import foundry.veil.api.network.VeilPacketManager;
 import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 import net.minecraft.core.BlockPos;
-import net.minecraft.core.HolderLookup;
 import net.minecraft.core.particles.BlockParticleOption;
 import net.minecraft.core.particles.ParticleTypes;
 import net.minecraft.nbt.CompoundTag;
@@ -369,7 +368,7 @@ public class RopeStrandHolderBehavior extends BlockEntityBehaviour {
                 final ItemStack stack = new ItemStack(SimItems.ROPE_COUPLING.get());
 
                 if (player != null) {
-                    if (!player.hasInfiniteMaterials() || !player.getInventory().contains(stack)) {
+                    if (!player.getAbilities().instabuild || !player.getInventory().contains(stack)) {
                         player.getInventory().placeItemBackInInventory(stack);
                     }
                 } else {
@@ -429,8 +428,8 @@ public class RopeStrandHolderBehavior extends BlockEntityBehaviour {
     }
 
     @Override
-    public void write(final CompoundTag nbt, final HolderLookup.Provider registries, final boolean clientPacket) {
-        super.write(nbt, registries, clientPacket);
+    public void write(final CompoundTag nbt, final boolean clientPacket) {
+        super.write(nbt, clientPacket);
         nbt.putBoolean("OwnStrand", this.strandOwner);
 
         if (this.attachedRopeID != null) {
@@ -439,13 +438,13 @@ public class RopeStrandHolderBehavior extends BlockEntityBehaviour {
 
         final ServerRopeStrand strand = this.getOwnedStrand();
         if (strand != null && this.strandOwner && !clientPacket) {
-            nbt.put("Strand", ServerRopeStrand.CODEC.encodeStart(NbtOps.INSTANCE, strand).getOrThrow());
+            nbt.put("Strand", ServerRopeStrand.CODEC.encodeStart(NbtOps.INSTANCE, strand).getOrThrow(false, error -> { }));
         }
     }
 
     @Override
-    public void read(final CompoundTag nbt, final HolderLookup.Provider registries, final boolean clientPacket) {
-        super.read(nbt, registries, clientPacket);
+    public void read(final CompoundTag nbt, final boolean clientPacket) {
+        super.read(nbt, clientPacket);
         this.strandOwner = nbt.getBoolean("OwnStrand");
 
         if (nbt.contains("HasRopeAttached")) {
@@ -501,7 +500,7 @@ public class RopeStrandHolderBehavior extends BlockEntityBehaviour {
         }
 
         while (points.size() > incomingPoints.size()) {
-            points.removeFirst();
+            points.remove(0);
         }
 
         for (int i = 0; i < incomingPoints.size(); i++) {
@@ -553,7 +552,7 @@ public class RopeStrandHolderBehavior extends BlockEntityBehaviour {
      */
     private void loadServerStrand(final CompoundTag tag) {
         final DataResult<Pair<ServerRopeStrand, Tag>> result = ServerRopeStrand.CODEC.decode(NbtOps.INSTANCE, tag);
-        final ServerRopeStrand strand = result.getOrThrow().getFirst();
+        final ServerRopeStrand strand = result.getOrThrow(false, error -> { }).get(0);
 
         this.ownedServerStrand = strand;
         this.queuedLevelAddition = true;
