@@ -166,8 +166,8 @@ public class RopeStrandRenderer {
         final ObjectArrayList<RopeRenderPoint> ropeRenderPoints = new ObjectArrayList<>();
         final ObjectArrayList<ClientRopePoint> points = new ObjectArrayList<>(inputPoints);
 
-        while (points.size() >= 2 && points.getFirst().position().distanceSquared(points.get(1).position()) < 1e-3) {
-            points.removeFirst();
+        while (points.size() >= 2 && points.get(0).position().distanceSquared(points.get(1).position()) < 1e-3) {
+            points.remove(0);
         }
 
         if (points.size() <= 1) {
